# rust_test

./: Cargo.toml  app  app.rs  main
src/: main.rs
