[package]
name = "rust_init"
version = "0.1.0"
authors = ["kaiyes <kaiyes.ansary@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
anyhow = "1.0.82"
solana-client = "1.18.12"
solana-sdk = "1.18.12"
